# whatsapp-api-webhook-server-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.ru.md  build.bat  build.sh  build_Debug.bat  build_Debug.sh  compose.yaml  config.json
examples/: examples.cpp  examples.h  user_adapter_example.cpp
include/: _user_adapter.h  config.h  logger.h  response.h  user_adapter.h  validator.h  webhook.h
jsonSchema/: commonSchemaComponents.json  incomingMessage.json  other.json  outgoingMessage.json
source/: _user_adapter.cpp  config.cpp  logger.cpp  main.cpp  validator.cpp  webhook.cpp
